Added reading image + Added showing shared file
Added a view (Shared) to show shared images without needing to login. Also added support for images and all types of videos instead of only mp4

--- a/src/components/Video.scss
+++ b/src/components/Video.scss
@@ -8,6 +8,11 @@
     width: var(--app-width);
     object-fit: cover;
   }
+
+  img {
+    width: var(--app-width);
+    object-fit: cover;
+  }
 }
 
 .user-details {
